--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <h2>Meet ASUC Senator Tellem's Office!</h2>
         <img class="chaka-img" src="committee/groupphoto.png" />
     </div>
+
     <div id="second-section">
         <div class="inner">
             <img src="SenatorTellem.png" align="LEFT" class="imgresponsive"/>
@@ -65,6 +66,7 @@
 
         </div>
     </div>
+
     <div id="third-section">
         <div class="title">
 	        <h2>Segments of Our Office</h2>
@@ -100,8 +102,8 @@
     </div>
     <div id="fourth-section">
         <div class="inner">
-            <img src="ejEvent.jpg" align="LEFT" class="imgresponsive"/><img src="LawEvent.jpg" align="RIGHT" class="imgresponsive"/>
             <h2>Past Events</h2>
+            <img src="ejEvent.jpg" align="LEFT" class="eventresponsive"/><img src="LawEvent.jpg" align="RIGHT" class="eventresponsive"/>
             </div>
     </div>
 
