--- a/committee/ce.html
+++ b/committee/ce.html
@@ -219,7 +219,7 @@
         font-weight: 300;
         width: 70vw;
         font-style: normal;
-        font-size: 1.25em;
+        font-size: 1.75vw;
         color: white;
         padding-bottom: 50px;
     }
@@ -244,7 +244,7 @@
         text-align: center;
         font-family: rig-solid-medium-outline, sans-serif;
         color: #E9DE81;
-        font-size: 4.25em;
+        font-size: 4.75vw;
         padding: 10px 0;
     }
 
