--- a/committee/ce.html
+++ b/committee/ce.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Community Engagement Committee</title> <!-- rename -->
+    <title>Community Engagement Committee - Senator Tellem's Office</title> <!-- rename -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/0acc59fded.js"></script>
     <link href="../index_styles.css" type="text/css" rel="stylesheet"/>
@@ -65,7 +65,8 @@
         <div class="inner">
             <img src="ce/izzyhuerta.JPG" align="LEFT" class="imgresponsive"/> <!-- rename -->
             <div class="bordertext">
-                <h2>Izzy Huerta</h2><p style="font-size:1.75vw;">Isabel Huerta is a sophomore double majoring in Political Science and Ethnic Studies and pursuing a minor in Race and Law. Born and raised in Santa Barbara, she hopes to dismantle institutional white supremacy in schools, by writing anti-racist school policy and targeting the very curriculum that is taught in K-12 education #ethnicstudies. In her free time, she loves making charcuterie boards, learning tiktok dances, and spending an entire day at the beach.</p> <!-- rename -->
+                <h1>Izzy Huerta</h1>
+                <h2>Committee Chair</h2><p style="font-size:1.75vw;">Isabel Huerta is a sophomore double majoring in Political Science and Ethnic Studies and pursuing a minor in Race and Law. Born and raised in Santa Barbara, she hopes to dismantle institutional white supremacy in schools, by writing anti-racist school policy and targeting the very curriculum that is taught in K-12 education #ethnicstudies. In her free time, she loves making charcuterie boards, learning tiktok dances, and spending an entire day at the beach.</p> <!-- rename -->
             </div>
 
         </div>
@@ -105,7 +106,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="ce/Helen.JPG" align="CENTER"/> <!-- rename -->
+            <img src="ce/Helen.JPG" align="CENTER" class="internresponsive"/> <!-- rename -->
             <h2>CE Intern</h2> <!-- rename -->
             <h3>Helen Wang</h3> <!-- rename -->
             <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning. </p> <!-- rename -->
@@ -224,21 +225,6 @@
         padding-bottom: 50px;
     }
     #first-section h1 {
-        /*margin: 0px;
-        top: 4.5vw;
-        left: 30vw;
-        position: absolute;
-        max-width: 40vw;
-        width: 40vw;
-        display: block;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 5vw;
-        color: #fcf6f2;
-        text-align: center;*/
-
-
         position: relative;
         margin: 0 auto;
         text-align: center;
@@ -300,7 +286,7 @@
         width: 100%;
     }
 
-    #second-section h2 {
+    #second-section h1 {
         margin: 10px;
         top: 3vw;
         left: 20vw;
@@ -311,7 +297,23 @@
         font-family: montserrat, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: 3vw;
+        font-size: 3.2vw;
+        color: #070F2E;
+        text-align: center;
+    }
+
+    #second-section h2 {
+        margin: 10px;
+        top: 6vw;
+        left: 0.5vw;
+        position: relative;
+        max-width: calc(100% - 40px);
+        width: calc(100% - 40px);
+        display: inline;
+        font-family: montserrat, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2vw;
         color: #070F2E;
         text-align: center;
     }
@@ -319,7 +321,7 @@
 
     #second-section p {
         position: relative;
-        padding-top: 3vw;
+        padding-top: 5vw;
         left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
@@ -505,64 +507,58 @@
     }
 
     #intern-section h2 {
-        top: 20px;
-        padding-top: 100px;
-        padding-left: 100px;
+        top: 13vw;
+        left: 6vw;
         position: absolute;
-        max-width: calc(100% - 40px);
-        width: calc(100% - 40px);
         display: block;
         font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 3.75em;
+        font-size: 5vw;
         color: #E9DE81;
         text-align: left;
         justify-content: center;
-        padding-bottom: 0px;
-        margin-bottom: 0px;
 
     }
 
     #intern-section h3 {
-        position: relative;
-        top: -380px;
-        right: -400px;
-        max-width: calc(100% - 40px);
-        width: calc(100% - 40px);
-        display: inline-block;
-        font-family: montserrat, sans-serif;
-        font-weight: 400;
+        position: absolute;
+        top: 3vw;
+        left: 71vw;
+        display: block;
+        font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 2.5em;
+        font-size: 3vw;
         color: white;
         text-align: center;
     }
 
 
     #intern-section p {
-        position: relative;
-        top: -380px;
-        right: -800px;
-        max-width: 40%;
-        width: 40%;
+        position: absolute;
+        top: 10vw;
+        left: 65vw;
+        max-width: 30vw;
+        width: 30vw;
         display: inline-block;
-        font-family: montserrat, sans-serif;
-        font-weight: 400;
+        font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 1em;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         margin-bottom: 0px;
         padding-bottom: 0px;
     }
 
-    #intern-section img {
-        width: 20%;
-        margin: 40px;
-        margin-right: 10px;
-        padding-left: 500px;
-        margin-left: 0px;
-        margin-bottom: 0px;
+    .internresponsive {
+        position: relative;
+        top: 4vw;
+        left: 36vw;
+        padding: 10px;
+        padding-right: 0px;
+        width: 25%;
+        height: auto;
+        padding-bottom: 100px;
+
     }
 
 
