--- a/committee/ce.html
+++ b/committee/ce.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Community Engagement Committee - Senator Tellem's Office</title> <!-- rename -->
+    <title>Community Engagement Committee - Senator Tellem's Office</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/0acc59fded.js"></script>
     <link href="../index_styles.css" type="text/css" rel="stylesheet"/>
 </head>
+<!-- copy from body to end -->
 <body>
 
     <div class="topnav" id="myTopnav">
@@ -27,9 +28,9 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="committee/apo.html">Academic and Professional Opportunities</a>
-                <a href="committee/cc.html">Campus Climate</a>
-                <a href="committee/ej.html">Environmental Justice</a>
+                <a href="apo.html">Academic and Professional Opportunities</a>
+                <a href="cc.html">Campus Climate</a>
+                <a href="ej.html">Environmental Justice</a>
             </div>
         </div>
         <div class="dropdown">
@@ -37,9 +38,9 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="committee/ce.html" class="active">Community Engagement</a> <!-- change active page -->
-                <a href="committee/legislative.html">Legislative</a>
-                <a href="committee/tech.html">Technology</a>
+                <a href="ce.html" class="active">Community Engagement</a> <!-- change active page -->
+                <a href="legislative.html">Legislative</a>
+                <a href="tech.html">Technology</a>
             </div>
         </div>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -106,7 +107,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="ce/Helen.JPG" align="CENTER" class="internresponsive"/> <!-- rename -->
+            <img src="ce/Helen.JPG" align="CENTER" class="internresponsive"/> <!-- rename img src only -->
             <h2>CE Intern</h2> <!-- rename -->
             <h3>Helen Wang</h3> <!-- rename -->
             <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning. </p> <!-- rename -->
@@ -134,78 +135,79 @@
 <style>
 
     .topnav {
-      overflow: hidden;
-      background-color: #070F2E;
-      font-family:sofia-pro, sans-serif;
-      padding-left: 10px;
-    }
+  overflow: hidden;
+  background-color: #070F2E;
+  font-family: sofia-pro, sans-serif;
+  padding-top: 10px;
+  padding-left: 10px;
+}
 
-    .topnav a {
-      float: left;
-      display: block;
-      color: #fcf6f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
+.topnav a {
+  float: left;
+  display: block;
+  color: #fcf6f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-    .active {
-      background-color: #555;
-      color: white;
-    }
+.active {
+  background-color: #555;
+  color: white;
+}
 
-    .topnav .icon {
-      display: none;
-    }
+.topnav .icon {
+  display: none;
+}
 
-    .dropdown {
-      float: left;
-      overflow: hidden;
-    }
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
 
-    .dropdown .dropbtn {
-      font-size: 17px;    
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      margin: 0;
-    }
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-    }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
-    .dropdown-content a {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
 
-    .topnav a:hover, .dropdown:hover .dropbtn {
-      background-color: #555;
-      color: white;
-    }
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
 
-    .dropdown-content a:hover {
-      background-color: #ddd;
-      color: black;
-    }
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
     .container {
       position: relative;
