--- a/committee/ce.html
+++ b/committee/ce.html
@@ -66,7 +66,8 @@
         <div class="inner">
             <img src="ce/izzyhuerta.JPG" align="LEFT" class="imgresponsive"/> <!-- rename -->
             <div class="bordertext">
-                <h1>Izzy Huerta</h1>
+                <h1>Izzy Huerta</h1> <!-- rename -->
+
                 <h2>Committee Chair</h2><p style="font-size:1.75vw;">Isabel Huerta is a sophomore double majoring in Political Science and Ethnic Studies and pursuing a minor in Race and Law. Born and raised in Santa Barbara, she hopes to dismantle institutional white supremacy in schools, by writing anti-racist school policy and targeting the very curriculum that is taught in K-12 education #ethnicstudies. In her free time, she loves making charcuterie boards, learning tiktok dances, and spending an entire day at the beach.</p> <!-- rename -->
             </div>
 
@@ -76,7 +77,8 @@
 
     <div id="third-section">
         <div class="title">
-            <h2>CE Associates</h2>
+            <h2>CE Associates</h2> <!-- rename -->
+
         </div>
         <div class="associates">
             <a href="#" class="sixth jason"> <!-- rename -->
@@ -219,7 +221,7 @@
         position: relative;
         left: 16vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 300;
+        font-weight: 400;
         width: 70vw;
         font-style: normal;
         font-size: 1.75vw;
@@ -610,4 +612,5 @@
     }
 </style>
 </body>
+<!-- end copy -->
 </html>
