--- a/committee/ce.html
+++ b/committee/ce.html
@@ -516,6 +516,7 @@
         position: absolute;
         display: block;
         font-family: sofia-pro, sans-serif;
+        /*font-family: rig-solid-medium-outline, sans-serif;*/
         font-style: normal;
         font-size: 5vw;
         color: #E9DE81;
