--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -49,7 +49,7 @@
 
     <div id="first-section">
         <div class="container">
-            <img src="ce/legislative-logo.png" align="CENTER" class="logoresponsive"/>
+            <img src="leg/legislative-logo.png" align="CENTER" class="logoresponsive"/>
             <h1>
                 Legislative
             </h1>
@@ -99,7 +99,7 @@
                 </p> 
             </a>
 
-            <a href="#" class="sixth jalen"> <!-- rename -->
+            <a href="#" class="sixth jalen"> 
                 <img src="leg/Jalen Johnson.jpg"/> 
                 <h2>Jalen Johnson</h2>
                 <p>
@@ -244,7 +244,7 @@
         margin: 0 auto;
         text-align: center;
         font-family: rig-solid-medium-outline, sans-serif;
-        color: #E9DE81;
+        color: #8d6e63;
         font-size: 4.75vw;
         padding: 10px 0;
     }
@@ -452,7 +452,7 @@
 
     .issabella p { 
         margin: 30px;
-        padding-top: 700px;
+        padding-top: 690px;
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
@@ -471,7 +471,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: .6em;
+        font-size: 1em;
         color: black;
         text-align: center;
     }
@@ -501,7 +501,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: .6em;
+        font-size: 1em;
         color: black;
         text-align: center;
     }
