--- a/committee/tech.html
+++ b/committee/tech.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Technology Committee</title>
+    <title>Technology Committee - Senator Tellem's Office</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/0acc59fded.js"></script>
     <link href="../index_styles.css" type="text/css" rel="stylesheet"/>
@@ -43,7 +43,7 @@
                 <a href="tech.html" class="active">Technology</a>
             </div>
         </div>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"></a>
     </div>
 
 
@@ -222,6 +222,7 @@
         font-size: 1.75vw;
         color: white;
         padding-bottom: 50px;
+        z-index: 10;
     }
     #first-section h1 {
         position: relative;
@@ -231,6 +232,7 @@
         color: #64b5f6;
         font-size: 4.75vw;
         padding: 10px 0;
+        z-index: 10;
     }
 
     .logoresponsive {
@@ -242,6 +244,7 @@
         width: 25%;
         height: auto;
         opacity: 0.2;
+        z-index: -1;
 
     }
 
@@ -252,6 +255,7 @@
     #first-section {
         height: auto;
         color: #64b5f6;
+        z-index: -10;
     }
     
     svg {
