--- a/committee/ej.html
+++ b/committee/ej.html
@@ -28,9 +28,9 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="committee/apo.html">Academic and Professional Opportunities</a>
-                <a href="committee/cc.html">Campus Climate</a>
-                <a href="committee/ej.html" class="active">Environmental Justice</a>
+                <a href="apo.html">Academic and Professional Opportunities</a>
+                <a href="cc.html">Campus Climate</a>
+                <a href="ej.html" class="active">Environmental Justice</a>
             </div>
         </div>
         <div class="dropdown">
@@ -38,12 +38,12 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="committee/ce.html">Community Engagement</a>
-                <a href="committee/legislative.html">Legislative</a>
-                <a href="committee/tech.html">Technology</a>
+                <a href="ce.html">Community Engagement</a>
+                <a href="legislative.html">Legislative</a>
+                <a href="tech.html">Technology</a>
             </div>
         </div>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"></a>
     </div>
 
 
@@ -221,6 +221,7 @@
         font-size: 1.75vw;
         color: white;
         padding-bottom: 50px;
+        z-index: 10;
     }
     #first-section h1 {
         position: relative;
@@ -230,17 +231,19 @@
         color: #56683E;
         font-size: 4.75vw;
         padding: 10px 0;
+        z-index: 10;
     }
 
     .logoresponsive {
         position: absolute;
-        top: -4vw;
+        top: 0vw;
         left: 38vw;
         padding: 10px;
         padding-right: 0px;
         width: 25%;
         height: auto;
         opacity: 0.25;
+        z-index: -1;
 
     }
 
@@ -251,6 +254,7 @@
     #first-section {
         height: auto;
         color: #64b5f6;
+        z-index: -10;
     }
     
     svg {
@@ -395,7 +399,7 @@
     }
 
 
-    .sydney h2 { /*rename*/
+    .sydney h2 { 
         position: relative;
         padding-bottom: 0px;
         margin: 0px;
@@ -408,7 +412,7 @@
         text-align: center;
     }
 
-    .sydney p { /*rename*/
+    .sydney p { 
         margin: 30px;
         padding-top: 630px;
         font-family: sofia-pro, sans-serif;
@@ -420,7 +424,7 @@
         padding-bottom: 63px;
     }
 
-    .kaylee h2 { /*rename*/
+    .kaylee h2 { 
         position: relative;
         padding-bottom: 0px;
         margin: 0px;
@@ -433,7 +437,7 @@
         text-align: center;
     }
 
-    .kaylee p { /*rename*/
+    .kaylee p { 
         margin: 30px;
         padding-top: 660px;
         font-family: sofia-pro, sans-serif;
@@ -446,7 +450,7 @@
     }
 
 
-    .george h2 { /*rename*/
+    .george h2 {
         position: relative;
         padding-bottom: 0px;
         margin: 0px;
@@ -459,7 +463,7 @@
         text-align: center;
     }
 
-    .george p { /*rename*/
+    .george p { 
         margin: 30px;
         padding-top: 590px;
         font-family: sofia-pro, sans-serif;
@@ -471,7 +475,7 @@
         padding-bottom: 63px;
     }
 
-    .george img { /*rename*/
+    .george img { 
         postion: relative;
         top: 200px;
     }
