--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div> 
         <div class="dropdown">
-            <button class="dropbtn">Departments 
+            <button class="dropbtn">Departments
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Committees 
+            <button class="dropbtn">Committees
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
@@ -43,7 +43,7 @@
                 <a href="committee/tech.html">Technology</a>
             </div>
         </div>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"></a>
     </div>
 
 
