--- a/committee/apo.html
+++ b/committee/apo.html
@@ -42,7 +42,7 @@
                 <a href="tech.html">Technology</a>
             </div>
         </div>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"></a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
 
 
