--- a/committee/tech.html
+++ b/committee/tech.html
@@ -43,7 +43,7 @@
                 <a href="tech.html" class="active">Technology</a>
             </div>
         </div>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"></a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
 
 
