--- a/chiefofstaff.html
+++ b/chiefofstaff.html
@@ -8,23 +8,48 @@
     <link href="index_styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <img class="TellemLogo" src="SenatorTellemLogo.png" width="130px" align="left"/>
-        <style>
-            .TellemLogo {
-                text-align: left;
-                padding-left: 20px;
-                padding-top: 10px;
-            }
-        </style>
-        <a href="/">Home</a>
-        <a href="/chaka">Meet Chaka</a>
-        <a href="https://asuc.org/">ASUC Website</a>
-    </header>
+    <div class="topnav" id="myTopnav">
+        <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Resources 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="chiefofstaff.html" class="active">Chief of Staff</a>
+                <a href="#">Office Hours</a>
+                <a href="#">Events</a>
+                <a href="https://asuc.org/">ASUC Website</a>
+            </div>
+        </div> 
+        <div class="dropdown">
+            <button class="dropbtn">Departments 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="committee/apo.html">Academic and Professional Opportunities</a>
+                <a href="committee/cc.html">Campus Climate</a>
+                <a href="committee/ej.html">Environmental Justice</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Committees 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="committee/ce.html">Community Engagement</a>
+                <a href="committee/legislative.html">Legislative</a>
+                <a href="committee/tech.html">Technology</a>
+            </div>
+        </div>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+
+
+
     <div id="container">
         <div id="first-section">
             <div class="inner">
-                <h1>About Chaka</h1>
                 <img src="Senator-Tellem-1-e1598386349142.png"/>
                 <p>
                     Sundiata “Chaka” Tellem, is a student at the University of California, Berkeley studying Political Economy and Public Policy.
@@ -60,6 +85,83 @@
 </body>
 </html>
 <style>
+    .topnav {
+  overflow: hidden;
+  background-color: #070F2E;
+  font-family: sofia-pro, sans-serif;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #fcf6f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  background-color: #555;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+
     #first-section {
         position: relative;
         height: auto;
