--- a/committee/tech.html
+++ b/committee/tech.html
@@ -18,6 +18,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
+                <a href="../chiefofstaff.html">Chief of Staff</a>
                 <a href="#">Office Hours</a>
                 <a href="#">Events</a>
                 <a href="https://asuc.org/">ASUC Website</a>
