--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
+                <a href="chiefofstaff.html">Chief of Staff</a>
                 <a href="#">Office Hours</a>
                 <a href="#">Events</a>
                 <a href="https://asuc.org/">ASUC Website</a>
@@ -104,8 +105,9 @@
         <div class="inner">
             <h2>Past Events</h2>
             <img src="ejEvent.jpg" align="LEFT" class="eventresponsive"/><img src="LawEvent.jpg" align="RIGHT" class="eventresponsive"/>
-            </div>
+            </div>-->
     </div>
+
 
     <script>
     function myFunction() {
