--- a/chiefofstaff.html
+++ b/chiefofstaff.html
@@ -17,7 +17,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">Office Hours</a>
+                <a href="https://www.instagram.com/p/CF8EFkXFpBJ/?igshid=1ri47xmpjfggc">Outreach Hours</a>
                 <a href="#">Events</a>
                 <a href="https://asuc.org/">ASUC Website</a>
             </div>
@@ -191,8 +191,8 @@
         text-align: center;
         font-family: rig-solid-medium-outline, sans-serif;
         color: #8d6e63;
-        font-size: 4.75vw;
-        padding: 10px 0;
+        font-size: 5vw;
+        padding: 50px 0;
     }
 
 
@@ -205,9 +205,9 @@
 }
 
 .imgresponsive {
-  padding: 10px;
+  padding: 50px;
   padding-right: 0px;
-  width: 30%;
+  width: 35%;
   height: auto;
 }
 
@@ -219,8 +219,8 @@
 
 #second-section h1 {
     margin: 10px;
-    top: 3vw;
-    left: 9vw;
+    top: 5vw;
+    left: 8vw;
     position: relative;
     max-width: calc(100% - 40px);
     width: calc(100% - 40px);
@@ -235,8 +235,8 @@
 
 #second-section h2 {
     margin: 10px;
-    top: 5.5vw;
-    left: -15vw;
+    top: 7.5vw;
+    left: -17vw;
     position: relative;
     max-width: calc(100% - 40px);
     width: calc(100% - 40px);
@@ -252,14 +252,14 @@
 
 #second-section p {
     position: relative;
-    padding-top: 3vw;
+    padding-top: 5.5vw;
     left: -1vw;
     font-family: sofia-pro, sans-serif;
     font-weight: 600;
     font-style: normal;
     max-width: 50vw;
     width: 50vw;
-    font-size: 1vw;
+    font-size: .8vw;
     color: #1f2630;
     text-align: center;
 }
