--- a/committee/tech.html
+++ b/committee/tech.html
@@ -19,7 +19,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">Office Hours</a>
+                <a href="https://www.instagram.com/p/CF8EFkXFpBJ/?igshid=1ri47xmpjfggc">Outreach Hours</a>
                 <a href="#">Events</a>
                 <a href="https://asuc.org/">ASUC Website</a>
             </div>
