--- a/committee/cc.html
+++ b/committee/cc.html
@@ -474,30 +474,30 @@
     .jay img {
         background-color: #070F2E;
         padding: 50px;
-        padding-bottom: 20px;
+        padding-bottom: 10px;
         padding-right: 20px;
     }
 
     .jay h2 {
         position: absolute;
         padding-bottom: 0px;
-        top: 3vw;
+        top: 2vw;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
+        font-size: .9em;
         color: white;
         text-align: center;
         padding: 30px;
-        padding-right: 50px;
+        padding-right: 40px;
         background-color: #48667E;
     }
 
     .jay p {
         margin: 50px;
-        padding-top: 330px;
+        padding-top: 380px;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
