--- a/committee/cc.html
+++ b/committee/cc.html
@@ -445,6 +445,13 @@
         background-color: #fcf6f2;
     }
 
+    .NanaAma img {
+        background-color: #070F2E;
+        padding: 50px;
+        padding-bottom: 10px;
+        padding-right: 20px;
+    }
+
 
     .NanaAma h2 { 
         position: relative;
@@ -474,7 +481,7 @@
     .jay img {
         background-color: #070F2E;
         padding: 50px;
-        padding-bottom: 10px;
+        padding-bottom: 0px;
         padding-right: 20px;
     }
 
@@ -497,12 +504,12 @@
 
     .jay p {
         margin: 50px;
-        padding-top: 380px;
+        padding-top: 320px;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: .6em;
+        font-size: 1.1vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
