--- a/committee/cc.html
+++ b/committee/cc.html
@@ -91,7 +91,7 @@
             </a>
 
             <a href="#" class="sixth NanaAma"> 
-                <img src="cc/NanaAma Arkorful.JPG"/> 
+                <img src="cc/NanaAma Arkorful.png"/> 
                 <h2>NanaAma Arkorful</h2> 
                 <p>
                     Ama is a first year student who plans on majoring in International Relations with minors in Korean and African American Studies. Moving from New York to Ghana to Delaware and finally Maryland, she doesn’t necessarily have a hometown. With every place she resides, she gains experiences that contributed to her interest in culture, art and people! Formerly serving as the Diversity and Equity Coordinator for the Maryland Association of Student Council, Ama has experience with educating her peers on intersectionality and how marginalized individuals are at a greater risk for mental health issues due to societal consciousness and constructs. Ama is an African American Initiative Scholar and is currently serving as one of the Campus Climate Administrator for ASUC Senator Chaka Tellem’s Office. In her free time, she can be found watching foreign horror films, studying Korean, photographing people, photoshopping, and taking care of her plants!
@@ -116,7 +116,7 @@
             </a>
 
             <a href="#" class="sixth makena"> 
-                <img src="cc/Makena Umnas.jpeg"/> 
+                <img src="cc/Makena Umnas.png"/> 
                 <h2>Makena Umnas</h2>
                 <p>
                     Makena is a first-year from Orange County, CA and intends on majoring in psychology. She is currently serving as one of the Campus Climate Administrators for ASUC Senator Chaka Tellem’s office. Makena has a passion for mental health awareness and inclusivity and joined the office with the hopes of advocating for marginalized groups and improving the wellbeing of all individuals on campus. In her free time, she loves going to the beach, trying new food places, and making jewelry.
@@ -132,7 +132,7 @@
         </div>
         <div class="interns">
             <a href="#" class="int sydney"> 
-                <img src="cc/sydneyroberts.jpeg"/> 
+                <img src="cc/sydneyroberts.png"/> 
                 <h2>Sydney Roberts</h2> 
                 <p>
                 Sydney Roberts is a freshman from Long Beach, California and intends to study Political Science and Public Policy. Sydney is passionate about empowering and advocating for marginalized groups, practicing environmentalism, and breaking the glass ceiling! Through working within the Campus Climate department, she hopes to create a more inclusive community at Cal for bipoc, lgbtq+ and disabled students. In her free time, she loves going to the beach and laughing with friends.
@@ -424,7 +424,7 @@
         border-radius: 0%;
         margin-top: 10px;
         margin-bottom: 200px;
-        width: 50%;
+        width: 55%;
         left: 23%;
         
     }
@@ -433,6 +433,7 @@
     #third-section img {
         width: 100%;
         margin: 0%;
+        height: auto;
 
     }
 
@@ -445,44 +446,12 @@
         background-color: #fcf6f2;
     }
 
-    .NanaAma img {
-        background-color: #070F2E;
-        padding: 50px;
-        padding-bottom: 10px;
-        padding-right: 20px;
-    }
-
-
-    .NanaAma h2 { 
-        position: relative;
-        padding-bottom: 0px;
-        margin: 0px;
-        display: inline;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 800;
-        font-style: normal;
-        font-size: 1em;
-        color: black;
-        text-align: center;
-    }
-
-    .NanaAma p { 
-        margin: 30px;
-        padding-top: 620px;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: .5em;
-        color: #1f2630;
-        text-align: center;
-        padding-bottom: 63px;
-    }
-
     .jay img {
         background-color: #070F2E;
-        padding: 50px;
+        padding: 5vw;
         padding-bottom: 0px;
-        padding-right: 20px;
+        padding-right: 1vw;
+        padding-left: 4vw;
     }
 
     .jay h2 {
@@ -498,14 +467,15 @@
         color: white;
         text-align: center;
         padding: 30px;
-        padding-right: 40px;
+        padding-right: 4vw;
+        padding-left: 4vw;
         background-color: #48667E;
     }
 
     .jay p {
         margin: 50px;
-        padding-top: 320px;
-        padding-left: 5vw;
+        padding-top: 35vw;
+        padding-left: 7vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -516,8 +486,47 @@
         background: #48667E;
         background-clip: content-box;
         
+    }
+
+    .NanaAma img {
+        background-color: #070F2E;
+        padding: 50px;
+        padding-bottom: 10px;
+        padding-right: 20px;
+    }
 
 
+    .NanaAma h2 { 
+        position: absolute;
+        padding-bottom: 0px;
+        top: 0vw;
+        left: 0vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: .9em;
+        color: white;
+        text-align: center;
+        padding: 30px;
+        padding-right: 40px;
+        background-color: #48667E;
+    }
+
+    .NanaAma p { 
+        margin: 50px;
+        padding-top: 820px;
+        padding-left: 5vw;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 200;
+        font-style: normal;
+        font-size: 1.1vw;
+        color: white;
+        text-align: center;
+        padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
 
