--- a/committee/ce.html
+++ b/committee/ce.html
@@ -65,7 +65,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="ce/izzyhuerta.JPG" align="LEFT" class="imgresponsive"/> <!-- rename -->
+            <img src="../profiles/izzy_outline.png" align="LEFT" class="imgresponsive"/> <!-- rename -->
             <div class="bordertext">
                 <h1>Izzy Huerta</h1> <!-- rename -->
 
@@ -83,7 +83,7 @@
         </div>
         <div class="associates">
             <a href="#" class="sixth jason"> <!-- rename -->
-                <img src="ce/jasondones.jpg"/> <!-- rename -->
+                <img src="../profiles/jason_outline.png"/> <!-- rename -->
                 <h2>Jason Dones</h2> <!-- rename -->
                 <p>
                 Jason Dones is a first-year studying Physics and Political Economy. As Community Engagement Associate, he hopes to help make the ASUC more responsive to and representative of the student population. He chose to join the office of Senator Chaka Tellem because he knows that this office is committed to bringing everyone in and keeping Cal the best while making us even better. He loves playing soccer, cooking, and traveling in his free time. When we get back in-person, you can find him in the physics lab or taking a hike off-campus.
@@ -91,7 +91,7 @@
             </a>
 
             <a href="#" class="sixth bianca"> <!-- rename -->
-                <img src="ce/biancatorresmurray.png"/> <!-- rename -->
+                <img src="../profiles/bianca_outline.png"/> <!-- rename -->
                 <h2>Bianca Torres Murray</h2> <!-- rename -->
                 <p>
                  Bianca is a first-year from Los Angeles, CA who intends to major in Ethnic Studies. She is a Community Engagement Associate for Senator Tellem’s office. Bianca is very passionate about social justice, government, community engagement, and research. After Cal, Bianca hopes to attend law school. In her free time, Bianca enjoys taking walks, painting/drawing, exploring cities, traveling, and going to events.
@@ -99,7 +99,7 @@
             </a>
 
             <a href="#" class="sixth zach"> <!-- rename -->
-                <img src="ce/zachneff.JPG"/> <!-- rename -->
+                <img src="../profiles/zach_outline.png"/> <!-- rename -->
                 <h2>Zachary Neff</h2> <!-- rename -->
                 <p>
                 Zach Neff is a third-year studying Political Science and a member of the Cal Varsity Rugby team. Hailing from Sacramento, California, Zach has a passion for Public Policy and Public Organization. He embraces intersectionality and seeks to advance community empathy and tolerance for all walks of people.  Zach is a member of the Pi Kappa Alpha fraternity and is the co-founder of the POC in Greek Life club. In his free time he enjoys deep conversations, long walks on the beach, and kicking it.
@@ -110,7 +110,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="ce/Helen.JPG" align="CENTER" class="internresponsive"/> <!-- rename img src only -->
+            <img src="../profiles/helen_outline.png" align="CENTER" class="internresponsive"/> <!-- rename img src only -->
             <h2>CE Intern</h2> <!-- rename -->
             <h3>Helen Wang</h3> <!-- rename -->
             <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning. </p> <!-- rename -->
@@ -161,7 +161,7 @@
         margin: 0 auto;
         text-align: center;
         font-family: rig-solid-medium-outline, sans-serif;
-        color: #E9DE81;
+        color: #6b27cc;
         font-size: 4.75vw;
         padding: 10px 0;
         z-index: 10;
@@ -175,7 +175,7 @@
         padding-right: 0px;
         width: 25%;
         height: auto;
-        opacity: 0.25;
+        opacity: 0.2;
         z-index: -1;
 
     }
@@ -198,7 +198,7 @@
     }
     text {
         font-family: rig-solid-medium-outline, sans-serif;
-        color: #64b5f6;
+        color: #6b27cc;
     }
 
     #second-section {
@@ -209,8 +209,9 @@
     }
 
     .imgresponsive {
-      padding: 10px;
+      padding: 0px;
       padding-right: 0px;
+      padding-left: 5vw;
       width: 30%;
       height: auto;
     }
@@ -223,7 +224,7 @@
 
     #second-section h1 {
         margin: 10px;
-        top: 3vw;
+        top: 0vw;
         left: 20vw;
         position: relative;
         max-width: calc(100% - 40px);
@@ -239,7 +240,7 @@
 
     #second-section h2 {
         margin: 10px;
-        top: 6vw;
+        top: 3vw;
         left: 0.5vw;
         position: relative;
         max-width: calc(100% - 40px);
@@ -256,13 +257,13 @@
 
     #second-section p {
         position: relative;
-        padding-top: 5vw;
-        left: 5vw;
+        padding-top: 1vw;
+        left: 3vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        max-width: 50vw;
-        width: 50vw;
+        max-width: 55vw;
+        width: 55vw;
         font-size: 1vw;
         color: #1f2630;
         text-align: center;
@@ -478,7 +479,7 @@
         display: inline-block;
         font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 1.25vw;
+        font-size: 1vw;
         color: white;
         text-align: center;
         margin-bottom: 0px;
