--- a/committee/ej.html
+++ b/committee/ej.html
@@ -62,7 +62,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="ej/nyahtisdell.jpeg" align="LEFT" class="imgresponsive"/> 
+            <img src="../profiles/nyah_outline.png" align="LEFT" class="imgresponsive"/> 
             <div class="bordertext">
                 <h1>Nyah Tisdell</h1>
                 <h2>Department Executive</h2><p style="font-size:1.75vw;">Nyah Tisdell is a junior studying Society and Environment minoring in Global Poverty and Practice. She is extremely passionate about addressing the intersectionality of race and environmental issues. Her goal is to create and uplift communities on campus and off to create a more unified and diverse environmental movement. She loves to paint, dance, and play guitar in her free time. Her favorite activity is spending an entire day at the beach or doing just about anything outdoors.</p> 
@@ -78,7 +78,7 @@
         </div>
         <div class="administrators">
             <a href="#" class="sixth kaylee"> 
-                <img src="ej/kayleehernandez.jpeg"/> 
+                <img src="../profiles/kaylee_outline.png"/> 
                 <h2>Kaylee Hernandez</h2> 
                 <p>
                 Kaylee Hernandez is an Environmental Justice Administrator for Senator Tellem. She is a sophomore studying Molecular and Cell Biology with an emphasis in Genetics. Kaylee wants to help educate her communities on the actions they can take to reduce their carbon footprint while also demanding that corporations make their practices more eco-friendly. She’s passionate about education and uplifting underrepresented communities. As a Los Angeles native, she loves to spend time outdoors and exploring nature since there isn’t enough of it in LA. She also loves to play a variety of sports, read classic books, and watch baking shows.
@@ -86,7 +86,7 @@
             </a>
 
             <a href="#" class="sixth sydney"> 
-                <img src="ej/sydneystavros.jpg"/> 
+                <img src="../profiles/sydney_outline.png"/> 
                 <h2>Sydney Starvos</h2> 
                 <p>
                  Sydney Stavros is a sophomore from Jacksonville, Florida intending to study Political Science and Business Administration, and works as an Environmental Justice Administrator  in the ASUC Office of Chaka Tellem. She is the Sustainability Chair for Chi Omega and volunteers with Matriculate, mentoring high school students through the college application process. She is passionate about sustainability, environmental justice, attempting to mitigate climate change and spreading awareness about these issues. In her free time she loves going to the beach, reading, making art, hiking, buying plants, and exploring the Bay Area with friends.
@@ -94,7 +94,7 @@
             </a>
 
             <a href="#" class="sixth george"> 
-                <img src="ej/george.png"/> 
+                <img src="../profiles/george_outline.png"/> 
                 <h2>George Cai</h2> 
                 <p>
                 George is an environmental justice administrator for Chaka’s ASUC office. He is a freshman that's intending a business major with a minor in cognitive science. He is also involved in the Cal Marching Band, the RCSA, and is planning to join an intramural flag football team. He is from Palo Alto California and loves video games, music, and football. He is passionate about the environment and has done many volunteer opportunities in his community.
@@ -105,7 +105,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="ej/michelle-gunawan.jpeg" align="CENTER" class="internresponsive"/> 
+            <img src="../profiles/michelle_outline.png" align="CENTER" class="internresponsive"/> 
             <h2>EJ Intern</h2> 
             <h3>Michelle Gunawan</h3> 
             <p>Michelle Gunawan is the Environmental Justice Intern for the ASUC Office of Chaka Tellem. She is a freshman from Los Angeles studying Molecular Environmental Biology. She has a passion for intersectional environmentalism, sustainability, and addressing climate change. She hopes to help spread awareness about environmental injustices within the Berkeley community through her work in this office. In her free time, she enjoys swimming, drinking boba, and taking care of her houseplants.</p> 
@@ -277,7 +277,7 @@
     }
 
     .imgresponsive {
-      padding: 10px;
+      padding: 0px;
       padding-right: 0px;
       width: 35%;
       height: auto;
@@ -291,7 +291,7 @@
 
     #second-section h1 {
         margin: 10px;
-        top: 3vw;
+        top: 0vw;
         left: 20vw;
         position: relative;
         max-width: calc(100% - 40px);
@@ -307,7 +307,7 @@
 
     #second-section h2 {
         margin: 10px;
-        top: 6vw;
+        top: 3vw;
         left: -2.5vw;
         position: relative;
         max-width: calc(100% - 40px);
@@ -324,13 +324,13 @@
 
     #second-section p {
         position: relative;
-        padding-top: 5vw;
-        left: 5vw;
+        padding-top: 2vw;
+        left: 3vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        max-width: 50vw;
-        width: 50vw;
+        max-width: 55vw;
+        width: 55vw;
         font-size: 1vw;
         color: #1f2630;
         text-align: center;
@@ -545,7 +545,7 @@
         display: inline-block;
         font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 1.25vw;
+        font-size: 1vw;
         color: white;
         text-align: center;
         margin-bottom: 0px;
