--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -62,7 +62,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="leg/maxim no background.png" align="LEFT" class="imgresponsive"/> 
+            <img src="../profiles/maxim_outline.png" align="LEFT" class="imgresponsive"/> 
             <div class="bordertext">
                 <h1>Maxim Miller</h1>
 
@@ -80,7 +80,7 @@
         </div>
         <div class="associates">
             <a href="#" class="sixth issabella">
-                <img src="leg/issabella romo.jpeg"/> 
+                <img src="../profiles/issabella_outline.png"/> 
                 <h2>Issabella Romo</h2>
                 <p>
                     Issabella Romo is a freshman majoring in Legal Studies and minoring in Human Rights. She joined the Legislative Committee in pursuing her passion for creating positive, lasting change through policies. Supporting the Latinx community on campus is a priority for Issabella, and she hopes to contribute to initiatives that create more long-term resources and opportunities for them. She enjoys playing the flute and walking her dog, Oliver (a wire fox terrier) in her free time. Her favorite artists are Ariana Grande and Dua Lipa although she also is a Tchaikovsky enthusiast.
@@ -89,7 +89,7 @@
             </a>
 
             <a href="#" class="sixth anallely">
-                <img src="leg/ASUCPicture-Anallely.jpeg"/> 
+                <img src="../profiles/anallely_outline.png"/> 
                 <h2>Anallely Martin</h2> 
                 <p>
                     Anallely is a Legislative Associate for Senator Chaka Tellem’s Legislative Committee. She is an intended Political Economy major and hopes to minor in Public Policy as well. Anallely is extremely passionate about representing marginalized communities and contributing to long lasting change that addresses the inequities faced by underrepresented communities. She hopes to pursue policy work and possibly attend Law school in the future. She is from Palm Springs, CA which is in SoCal. Her hobbies consist of exploring new places in the Bay, hiking, walking her dog (who she’s had since she was 7) and spending days at the beach.
@@ -98,7 +98,7 @@
             </a>
 
             <a href="#" class="sixth jalen"> 
-                <img src="leg/Jalen Johnson.jpg"/> 
+                <img src="../profiles/jalen_outline.png"/> 
                 <h2>Jalen Johnson</h2>
                 <p>
                     Jalen is a second year studying Political Science. He is from Sacramento, CA and is a Legislative Associate for the legislative committee for Senator Tellem’s office. Jalen is also involved with other on campus activities such as Cal Dems, Cal ACLU and Cal United Nations. Jalen is very passionate about education and political advocacy amongst the youth. His favorite hobbies are playing videogames, watching tv, and traveling. After Cal, Jalen hopes to go to law school or become a high school or college level teacher/professor.
@@ -118,7 +118,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="leg/CaitlinClift.png" align="CENTER" class="internresponsive"/>
+            <img src="../profiles/caitlin_outline.png" align="CENTER" class="internresponsive"/>
             <h2>Legislative Intern</h2> 
             <h3>Caitlin Clift</h3> 
             <p>Caitlin Clift is the Legislative Intern for the Office of ASUC Senator Chaka Tellem. She is currently a freshman intending to major in Political Science. Raised in Orange County, California, she is extremely passionate about immigrant rights and hopes to become an immigration lawyer in the future. She loves dogs, concerts, and making clothes and jewelry. Her favorite activities are spending the day at the beach or exploring new cities with friends.</p> 
@@ -291,8 +291,9 @@
     }
 
     .imgresponsive {
-      padding: 10px;
+      padding: 0px;
       padding-right: 0px;
+      padding-left: 5vw;
       width: 30%;
       height: auto;
     }
@@ -305,7 +306,7 @@
 
     #second-section h1 {
         margin: 10px;
-        top: 3vw;
+        top: 0vw;
         left: 20vw;
         position: relative;
         max-width: calc(100% - 40px);
@@ -321,8 +322,8 @@
 
     #second-section h2 {
         margin: 10px;
-        top: 6vw;
-        left: 0.5vw;
+        top: 3vw;
+        left: -1vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -338,7 +339,7 @@
 
     #second-section p {
         position: relative;
-        padding-top: 5vw;
+        padding-top: 2vw;
         left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
