--- a/committee/apo.html
+++ b/committee/apo.html
@@ -64,7 +64,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="apo/steph-wong.jpg" align="LEFT" class="imgresponsive"/> 
+            <img src="../profiles/stephanie_outline.png" align="LEFT" class="imgresponsive"/> 
             <div class="bordertext">
                 <h1>Stephanie Wong</h1>
                 <h2>Department Executive</h2><p style="font-size:1.5vw;">Stephanie Wong is the Academic and Professional Opportunities Executive for the Office of ASUC Senator Chaka Tellem. She is currently a sophomore majoring in Political Science and Global Studies with an emphasis on Asia. Among the many reasons for joining Chaka’s team, she resonates strongly (and still does) with his belief in uplifting underrepresented minorities through education and opportunity access. Outside of the ASUC, she is involved with the Phi Alpha Delta Pre-Law Fraternity, recreational volleyball, and Cal Parli Debate Team. She is also passionate about much-needed conversations in our political system, especially when it pertains to advancing the Asian American and Pacific Islander Community. Please do not hesitate to reach out to her if you would like to join our APO team!</p>
@@ -80,7 +80,7 @@
         </div>
         <div class="administrators">
             <a href="#" class="sixth kalliope">
-                <img src="apo/NEWKalliZervas.jpeg"/> 
+                <img src="../profiles/kalliope_outline.png"/> 
                 <h2>Kalliope Zervass</h2>
                 <p>
                     Kalliope Zervas is a 3rd year Chemical Biology major from Sacramento, California. Kalliope has always aspired to help those in need, participating in a variety of extracurricular activities to do so, including being in the midst of starting her own non-profit giving medical supplies to countries in need. Kalliope also participates in STEM research and she hopes to help other STEM students, who would otherwise be disadvantaged, get involved in similar academic opportunities . After Cal, she hopes to one day become a Trauma Surgeon in the Doctors Without Borders program and/or work in politics in order to help reform the US healthcare system. In her free time, she loves to paint, dance, and play with her dogs!
@@ -90,24 +90,23 @@
             </a>
 
             <a href="#" class="sixth isha">
-                <img src="apo/ishashah.jpeg"/> 
+                <img src="../profiles/isha_outline.png"/> 
                 <h2>Isha Shah</h2> 
                 <p>
                     Isha Shah is the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. She is a junior majoring in Bioengineering, with a minor in Public Policy and Design Innovation, and is originally from Toronto, Canada. Isha’s passion to provide equitable education stems from her involvement as a Special Needs Education Tutor and Youth Empowerment Activist in highschool. After graduation, she wants to pursue medicine, while integrating healthcare and technology to provide accessible patient care to low income and underserved populations. Within the Berkeley Community, she is also a Campus Ambassador, Undergraduate Researcher at UCSF Medicine and part of the Society of Women Engineers.
-
 
                 </p> 
             </a>
 
             <a href="#" class="sixth jacob"> 
-                <img src="apo/JacobWilliams.jpeg"/> 
+                <img src="../profiles/jacob_outline.png"/> 
                 <h2>Jacob Williams</h2>
                 <p>
-                    Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown.</p> 
+                    Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown. </p> 
             </a>
 
             <a href="#" class="sixth alfonse">
-                <img src="square.jpg"/> 
+                <img src="../profiles/alfonse_outline.png"/> 
                 <h2>Alfonse Dalcour</h2>
                 <p>
                     [INCORRECT]Cyn Gomez is a Legislative Associate for the ASUC Office of Chaka Tellem. They are a freshman currently intending to major in Social Welfare with a double minor in Public Policy and Spanish. Their goal is to create systematic change that uplifts underrepresented communities and fights alongside others for representation. After undergrad, Cyn wants to attend law school and practice civil rights law to protect and advocate for those who have been wronged by a system that should be built to protect everyone. They love to read, take naps, and embroider in their freetime, among going for runs and working out to destress. In their free time, you can catch Cyn planning for their next week or studying for any and every class![INCORRECT]
@@ -118,7 +117,7 @@
 
     <div id="intern-section">
         <div class="intern"> 
-            <img src="apo/Katarina.jpg" align="CENTER" class="internresponsive"/>
+            <img src="../profiles/katarina_outline.png" align="CENTER" class="internresponsive"/>
             <h2>APO Intern</h2>
             <h3>Katarina Stankovic</h3> 
             <p>Katarina Stankovic is the Pre-Law Academic and Professional Opportunities Administrator for ASUC Senator Chaka Tellem’s office.  She is a sophomore studying Political Science from Los Angeles, California. Katarina is passionate about helping underserved communities by uplifting their voices in any way possible. She has always been a community advocate and continues to prioritize social justice going towards the future.  In her free time, she likes to ski, explore hiking trails, scuba dive, write, and practice various languages. She is someone who enjoys meeting new people and willing to learn unique things from others.</p> 
@@ -291,9 +290,9 @@
     }
 
     .imgresponsive {
-      padding: 10px;
+      padding: 0vw;
       padding-right: 0px;
-      width: 30%;
+      width: 40%;
       height: auto;
     }
 
@@ -305,8 +304,8 @@
 
     #second-section h1 {
         margin: 10px;
-        top: 3vw;
-        left: 15vw;
+        top: 2vw;
+        left: 5vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -321,8 +320,8 @@
 
     #second-section h2 {
         margin: 10px;
-        top: 6vw;
-        left: -12vw;
+        top: 4.5vw;
+        left: -22vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -338,13 +337,13 @@
 
     #second-section p {
         position: relative;
-        padding-top: 5vw;
-        left: 5vw;
+        padding-top: 3vw;
+        left: -8vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        max-width: 50vw;
-        width: 50vw;
+        max-width: 60vw;
+        width: 60vw;
         font-size: 1vw;
         color: #1f2630;
         text-align: center;
@@ -584,7 +583,7 @@
         display: inline-block;
         font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 1.25vw;
+        font-size: 1vw;
         color: white;
         text-align: center;
         margin-bottom: 0px;
